# gpt

./: README.md  REPORT.md  demo.ipynb  pyproject.toml
notebooks/: attention.ipynb
src/: abstract.py  backend.py  bench.py  cpu_baseline.py  cpu_naive.py  gpu_base.py  gpu_v1.py  gpu_v2.py  gpu_v3.py  modules.py  transformer.py
tests/: test_correctness.py
