[project]
name = "attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.1",
    "numba>=0.61",
    "matplotlib>=3.9",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
